# stateless

./: Cargo.toml  README.md  TODO.md
crates/core/: Cargo.toml
crates/core/src/: lib.rs
crates/macros/: Cargo.toml
crates/macros/src/: lib.rs
crates/server/: Cargo.toml
crates/server/src/: lib.rs
docs/: BORROWCHECKER.md  FEATURES.md  IMPL.md  ROADMAP.md  SPEC.md  TECH.md
src/: lib.rs
tests/: lib.rs
tests/borrow_checker/: ownership_tests.rs
tests/common/: mod.rs
tests/integration/: scenarios.rs
tests/patterns/: pattern_tests.rs
