[package]
name = "stateless"
version = "0.1.0"
edition = "2021"
description = "A universal caching layer with compile-time safety guarantees"
license = "MIT"
authors = ["Stateless Contributors"]
repository = "https://github.com/saint0x/stateless-sdk"

[workspace]
members = [
    "crates/core",
    "crates/macros",
    "crates/redis",
    "crates/client",
    "crates/edge",
    "crates/server"
]

[workspace.dependencies]
tokio = { version = "1.36", features = ["full"] }
futures = "0.3"
async-trait = "0.1"
thiserror = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
dashmap = "5.5"
bytes = "1.5"

[dependencies]
core = { path = "crates/core", version = "0.1.0" }
macros = { path = "crates/macros", version = "0.1.0" }
redis = { path = "crates/redis", version = "0.1.0", optional = true }
client = { path = "crates/client", version = "0.1.0", optional = true }
edge = { path = "crates/edge", version = "0.1.0", optional = true }
server = { path = "crates/server", version = "0.1.0", optional = true }

[dev-dependencies]
tokio = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3.8"
rand = "0.8"
criterion = "0.5"
pretty_assertions = "1.4"
test-log = "0.2"

[features]
default = ["redis-compat"]
redis-compat = ["redis"]
client = ["client"]
edge = ["edge"]
server = ["server"]
full = ["redis-compat", "client", "edge", "server"]
