[package]
name = "core"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
futures = { workspace = true }
async-trait = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
dashmap = { workspace = true }
bytes = { workspace = true } 